# Issuer

./: .gitignore  CLAUDE.md  README.md  README.md.backup  meson.build
data/: io.github.tobagin.AppTemplate.desktop.in  io.github.tobagin.AppTemplate.gresources.xml.in  io.github.tobagin.AppTemplate.gschema.xml.in  io.github.tobagin.AppTemplate.metainfo.xml.in  io.github.tobagin.Issuer.desktop.in  io.github.tobagin.Issuer.gresources.xml.in  io.github.tobagin.Issuer.gschema.xml.in  io.github.tobagin.Issuer.metainfo.xml.in  meson.build
data/ui/: window.blp
data/ui/dialogs/: keyboard_shortcuts.blp  preferences.blp
data/ui/views/: issues.blp
packaging/: io.github.tobagin.AppTemplate.Devel.yml  io.github.tobagin.AppTemplate.yml  io.github.tobagin.Issuer.Devel.yml  io.github.tobagin.Issuer.yml
po/: LINGUAS  POTFILES.in  meson.build
scripts/: build.sh
specs/001-this-will-project/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-this-will-project/contracts/: generated-project.md  template-api.md
src/: Application.vala  Config.vala.in  Constants.vala  Main.vala  Window.vala  meson.build
src/api/: GitHubApi.vala
src/dialogs/: About.vala  KeyboardShortcuts.vala  Preferences.vala
src/managers/: SettingsManager.vala
src/models/: Issue.vala  Repository.vala
src/utils/: ErrorHandler.vala  Logger.vala  ResourceManager.vala
src/views/: IssuesView.vala
tests/: meson.build
